--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ header {
 .list-nav {
   padding-top: 1rem;
 }
-.list-nav-second {
+.hide {
   display: none;
 }
 
@@ -90,5 +90,18 @@ header {
   content: '\f107';
   font-weight: bold;
   font-family: "Font Awesome 5 Free";
-  padding-left: 1.3rem;
+  margin-left: 1.3rem;
+  display: inline-block;
+  transform: rotate(90deg);
+}
+.link-nav-arrow.arrow::after {
+  transform: rotate(0);
+}
+
+/* Menu Secundário */
+.item-nav-second a {
+  color: #fff;
+  text-decoration: none;
+  padding: 0 0 1rem 2.7rem;
+  display: block;
 }
